# VRC_AI

./: README.md  ai_memory_log.jsonl  main.py  movement_commands.json  movement_controller.py  pyproject.toml  requirements.txt  run.bat  setup.bat  terst.py  testopenvr.py
