[project]
name = "vrc-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=7.0.1",
    "numpy>=2.2.5",
    "openai-whisper>=20240930",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]
